Add redirect to Etsy

--- a/index.html
+++ b/index.html
@@ -4,16 +4,40 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; display: flex; justify-content: center; align-items: center; background-color: black;">
-     <img src="./tone carrier logo.svg" style="width: 350px;" alt="">   
-        <script src="" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Redirecting...</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+    <script>
+      window.onload = function () {
+        // Redirects to the new URL after the page loads
+        const timeout = setTimeout(() => {
+          window.location.href = "https://www.etsy.com/shop/ThePrintedPhotolab";
+        }, 2000);
+      };
+    </script>
+  </head>
+  <body
+    style="
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: black;
+    "
+  >
+    <img
+      src="./tone carrier logo.svg"
+      style="width: 350px"
+      alt="Tone Carrier Logo"
+    />
+    <script src="" async defer></script>
+  </body>
 </html>
